force-app/main/default/objects/Bank_Transcation__c/Bank_Transcation__c.object-meta.xml
<CustomObject>
    <label>Bank Transcation</label>
    <nameField>
        <displayFormat>T-{00}</displayFormat>
        <label>Bank Transcation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Transcations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>