force-app/main/default/objects/Bank_Transcation__c/fields/AccountNo__c.field-meta.xml
<CustomField>
    <fullName>AccountNo__c</fullName>
    <label>AccountNo</label>
    <referenceTo>BankMaster__c</referenceTo>
    <relationshipLabel>abc</relationshipLabel>
    <relationshipName>Bank_Transcations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>