force-app/main/default/objects/Bank_Transcation__c/fields/BankMaster__c.field-meta.xml
<CustomField>
    <fullName>BankMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>BankMaster</label>
    <referenceTo>BankMaster__c</referenceTo>
    <relationshipLabel>Bank Transcations (BankMaster)</relationshipLabel>
    <relationshipName>Bank_Transcations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>