force-app/main/default/objects/Bank_Transcation__c/fields/namecc__c.field-meta.xml
<CustomField>
    <fullName>namecc__c</fullName>
    <label>namecc</label>
    <length>18</length>
    <type>Text</type>
</CustomField>