force-app/main/default/objects/Bank_Transcation__c/fields/pointer__c.field-meta.xml
<CustomField>
    <fullName>pointer__c</fullName>
    <label>pointer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>