force-app/main/default/objects/Bank_Transcation__c/fields/TransAmount__c.field-meta.xml
<CustomField>
    <fullName>TransAmount__c</fullName>
    <label>TransAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>