force-app/main/default/objects/Bank_Transcation__c/fields/TransDate__c.field-meta.xml
<CustomField>
    <fullName>TransDate__c</fullName>
    <label>TransDate</label>
    <type>Date</type>
</CustomField>