force-app/main/default/objects/Bank_Transcation__c/fields/TransType__c.field-meta.xml
<CustomField>
    <fullName>TransType__c</fullName>
    <label>TransType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>