force-app/main/default/objects/Bank_Transcation__c/validationRules/negative_trans_shuld_not_be_possile.validationRule-meta.xml
<ValidationRule>
    <fullName>negative_trans_shuld_not_be_possile</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( TransType__c , &quot;Withdraw&quot;) ,(  AccountNo__r.AvailBalance__c  -  TransAmount__c  )   &lt; 500)</errorConditionFormula>
    <errorMessage>ur balance is less then 500</errorMessage>
</ValidationRule>